--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Netflix Landing Page Clone</title>
+	  <link rel="stylesheet" type="text/css" href="/style.css" />
 </head>
   <style>
     body {
@@ -11,7 +12,8 @@
     }
     <div id='show_bg_2'></div>
   </style>
-  
+
+<script src="filename.js"></script>
 <header class="showcase">
 			<div class="showcase-top">
 				<img src="https://upload.wikimedia.org/wikipedia/commons/0/08/Netflix_2015_logo.svg" alt="" width="200"/>
