--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <div id='show_bg_2'></div>
   </style>
 
-<script src="filename.js"></script>
+<script src="script.js"></script>
 <header class="showcase">
 			<div class="showcase-top">
 				<img src="https://upload.wikimedia.org/wikipedia/commons/0/08/Netflix_2015_logo.svg" alt="" width="200"/>
